(1) Added support for CustomQuery endpoint, (2) Added token refresh example